Make getUserMedia() ask for permission if video constraints cannot be satisfied, except for the deviceID constraint.

This is nonstandard behavior, but Hangouts relies on it.
Will fix back once full spec-compliant constraint processing is
implemented.

BUG=690336

Review-Url: https://codereview.chromium.org/2683053004
Cr-Commit-Position: refs/heads/master@{#452122}

Former-commit-id: c726ced4178899d86c011f633ce793910dbec556